force-app/main/default/objects/Project__c/fields/Last_System_Update_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_System_Update_Date__c</fullName>
    <description>This field is used to store the last updated date of the system.</description>
    <label>Last System Update Date</label>
    <type>Date</type>
</CustomField>