force-app/main/default/objects/Project__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field is used for Plant lookup on Project Object.</description>
    <label>Plant</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Project</relationshipLabel>
    <relationshipName>Project</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>