force-app/main/default/objects/Project__c/fields/PlantAccount__c.field-meta.xml
<CustomField>
    <fullName>PlantAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to store the plant</description>
    <label>PlantAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project (PlantAccount)</relationshipLabel>
    <relationshipName>Project2</relationshipName>
    <type>Lookup</type>
</CustomField>