force-app/main/default/objects/Project__c/fields/Revision_No__c.field-meta.xml
<CustomField>
    <fullName>Revision_No__c</fullName>
    <description>This field is used to store the revision number of the system.</description>
    <label>Revision No</label>
    <length>10</length>
    <type>Text</type>
</CustomField>