force-app/main/default/objects/Project__c/listViews/All_Project.listView-meta.xml
<ListView>
    <fullName>All_Project</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Project_Code__c</columns>
    <columns>Revision_No__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Project</label>
</ListView>